--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <!-- font awesome CDN -->
+    <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <!-- 네이버 지도 API
+      별도의 인증키로 교체가 필요한 경우 "인증키" 부분을 바꿔서 사용하세요
+      <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=인증키&submodules=geocoder"></script>
+
+      제공 인증키(ClientID): _ydj_2zvT5NeZ_zCFLa
+    -->
+<!--    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=_ydj_2zvT5NeZ_zCFLa7&submodules=geocoder"></script>-->
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
